--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-  "first_app": "",
-  "change_calculator": "",
-  "mortgage_calculator": "",
-  "top_spots": "",
-  "vstda": ""
+  "first_app": "https://young-falls-38019.herokuapp.com/",
+  "change_calculator": "https://msg-change-calculator.herokuapp.com/",
+  "mortgage_calculator": "https://mg-mortgage-calculator.herokuapp.com/",
+  "top_spots": "https://mg-s-d-top-spots.herokuapp.com/",
+  "vstda": "https://mg-react-100-vstda.herokuapp.com/"
 }
